# urdf-loader-test-vr

./: README.md  google-sheets-api-tutorial.md  index.css  index.html  notes.md  package-lock.json  package.json  test.html  test.js  webpack.config.js
models/: block.glb  box.glb  lid.glb  target.glb
models/sawyer_description/: env_settings.yaml
models/table/: scene.gltf
models/test/: license.txt  scene.gltf
python/: pklUnpacker.py
relaxed_ik_web/: .gitignore  Cargo.toml  README.md  index.html  performance.html
relaxed_ik_web/config/: settings.yaml
relaxed_ik_web/docs/post/about/: index.html
relaxed_ik_web/optimization-engine/: Cargo.toml
relaxed_ik_web/optimization-engine/src/alm/: alm_optimizer.rs
relaxed_ik_web/optimization-engine/src/core/fbs/: fbs_optimizer.rs
relaxed_ik_web/optimization-engine/src/core/panoc/: panoc_optimizer.rs
relaxed_ik_web/src/: lib.rs  relaxed_ik_web.rs  toy_test.rs
relaxed_ik_web/src/groove/: collision_nn.rs  env_collision.rs  groove.rs  mod.rs  objective.rs  objective_master.rs  vars.rs
relaxed_ik_web/src/spacetime/: arm.rs  robot.rs
relaxed_ik_web/src/utils_rust/: mod.rs  robot_shape_model.rs
sample files/sawyer animations/: 11_stirring_base_0.csv  11_stirring_base_0.pkl  6_toys_base_0.csv  (+1 more)
src/: 3dLine.js  Condition.js  Control copy.js  Control.js  Data.js  UI.js  controlMapping.js  cubeTest.js  dataControl.js  globals.js  helpers.js  index.js  modelViewer.js  mouseControl.js  relaxedikDemo.js  sceneInit.js  sheetControl.js  taskControl.js  taskManager.js  uiControl.js  utils.js  vrControl.js
(+218 files in other folders)
