[package]
name = "relaxed_ik_web"
version = "0.1.0"
authors = ["djrakita <djrakita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.19", features = ["serde-serialize"]}
optimization_engine = { path = "optimization-engine" }
# ndarray = "0.13.0"
num = "0.2.0"
# nlopt = "0.5.1"
time = "0.1"
# wasm-bindgen = "0.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
# serde_derive ="1.0"
serde_json = "1.0"
console_error_panic_hook = "0.1"

# [dependencies.web-sys]
# version = "0.3"
# features = [
#   "console",
# ]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[lib]
# name = "relaxed_ik_lib"
# path = "src/lib.rs"
# crate-type = ["cdylib", "rlib", "dylib"]
crate-type = ["cdylib"]


# [[bin]]
# name = "relaxed_ik_bin"
# path = "src/bin/relaxed_ik_bin.rs"